<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLay0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.example.chivo.simplecalc.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:background="@color/lightYellow"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/display_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:cursorVisible="true"
            android:textColorHint="@color/DimGray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="60sp"
            />
        <EditText
            android:id="@+id/exp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="bottom"
            android:lines="2"
            android:maxLines="2"
            android:textSize="20sp" />
    </LinearLayout>
    <!--ROW 1-->

    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        >
        <Button
            android:id="@+id/ac"
            android:layout_width="39dp"
            android:layout_height="match_parent"
            android:layout_weight="1.58"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/ac" />


        <Button
            android:id="@+id/percentage"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/percentage"/>

        <Button
            android:id="@+id/divide"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/divide"/>
    </LinearLayout>

    <!-- 2nd row done-->

    <LinearLayout
        android:id="@+id/second_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        >
        <Button
            android:id="@+id/seven"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/seven"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/eight"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/nine"/>

        <Button
            android:id="@+id/multiply"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/multiply"/>

    </LinearLayout>

    <!-- 3nd row done-->

    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        >

        <Button
            android:id="@+id/four"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/four"/>

        <Button
            android:id="@+id/five"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/five"/>

        <Button
            android:id="@+id/six"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/six"/>

        <Button
            android:id="@+id/minus"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/minus"/>

    </LinearLayout>

    <!-- 4th row done-->

    <LinearLayout
        android:id="@+id/fourth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        >
        <Button
            android:id="@+id/one"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/one"/>

        <Button
            android:id="@+id/two"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/two"/>

        <Button
            android:id="@+id/three"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/three"/>

        <Button
            android:id="@+id/plus"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/plus"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="1dp"
        >
        <Button
            android:id="@+id/zero"
            android:layout_width="98dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/zero"/>

        <Button
            android:id="@+id/dot"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/brown"
            android:textColor="@color/white"
            android:text="@string/dot"/>

        <Button
            android:id="@+id/equal"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginRight="1dp"
            android:background="@color/Orange"
            android:textColor="@color/white"
            android:text="@string/equal"/>

    </LinearLayout>


</LinearLayout>
